@@ -22,21 +22,24 @@ import com.google.common.annotations.VisibleForTesting;
 import com.netflix.conductor.common.metadata.tasks.Task;
 import com.netflix.conductor.common.metadata.tasks.Task.Status;
 import com.netflix.conductor.common.metadata.tasks.TaskDef;
+import com.netflix.conductor.common.metadata.workflow.TaskType;
 import com.netflix.conductor.common.metadata.workflow.WorkflowDef;
 import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
-import com.netflix.conductor.common.metadata.workflow.WorkflowTask.Type;
 import com.netflix.conductor.common.run.Workflow;
 import com.netflix.conductor.common.run.Workflow.WorkflowStatus;
+import com.netflix.conductor.common.utils.ExternalPayloadStorage;
 import com.netflix.conductor.core.execution.mapper.TaskMapper;
 import com.netflix.conductor.core.execution.mapper.TaskMapperContext;
+import com.netflix.conductor.core.utils.ExternalPayloadStorageUtils;
 import com.netflix.conductor.core.utils.IDGenerator;
 import com.netflix.conductor.core.utils.QueueUtils;
-import com.netflix.conductor.dao.MetadataDAO;
 import com.netflix.conductor.dao.QueueDAO;
 import com.netflix.conductor.metrics.Monitors;
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import javax.annotation.Nullable;
 import javax.inject.Inject;
 import javax.inject.Named;
 import java.util.Collections;
@@ -47,7 +50,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.Function;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import static com.netflix.conductor.common.metadata.tasks.Task.Status.COMPLETED_WITH_ERRORS;
@@ -67,44 +70,49 @@ public class DeciderService {
 
     private static Logger logger = LoggerFactory.getLogger(DeciderService.class);
 
-    private final MetadataDAO metadataDAO;
-
     private final QueueDAO queueDAO;
 
-    private ParametersUtils parametersUtils = new ParametersUtils();
+    private final ParametersUtils parametersUtils;
 
     private final Map<String, TaskMapper> taskMappers;
 
+    private final ExternalPayloadStorageUtils externalPayloadStorageUtils;
+
+    @SuppressWarnings("ConstantConditions")
+    private final Predicate<Task> isNonPendingTask = task -> !task.isRetried() && !task.getStatus().equals(SKIPPED) && !task.isExecuted() || SystemTaskType.isBuiltIn(task.getTaskType());
+
     @Inject
-    public DeciderService(MetadataDAO metadataDAO, QueueDAO queueDAO, @Named("TaskMappers") Map<String, TaskMapper> taskMappers) {
-        this.metadataDAO = metadataDAO;
+    public DeciderService(ParametersUtils parametersUtils, QueueDAO queueDAO,
+                          ExternalPayloadStorageUtils externalPayloadStorageUtils,
+                          @Named("TaskMappers") Map<String, TaskMapper> taskMappers) {
         this.queueDAO = queueDAO;
+        this.parametersUtils = parametersUtils;
         this.taskMappers = taskMappers;
+        this.externalPayloadStorageUtils = externalPayloadStorageUtils;
     }
 
     //QQ public method validation of the input params
-    public DeciderOutcome decide(Workflow workflow, WorkflowDef workflowDef) throws TerminateWorkflowException {
+    public DeciderOutcome decide(Workflow workflow) throws TerminateWorkflowException {
 
-        workflow.setSchemaVersion(workflowDef.getSchemaVersion());
         //In case of a new workflow the list of tasks will be empty
         final List<Task> tasks = workflow.getTasks();
         //In case of a new workflow the list of executedTasks will also be empty
         List<Task> executedTasks = tasks.stream()
-                .filter(t -> !t.getStatus().equals(SKIPPED) && !t.getStatus().equals(READY_FOR_RERUN))
+                .filter(t -> !t.getStatus().equals(SKIPPED) && !t.getStatus().equals(READY_FOR_RERUN) && !t.isExecuted())
                 .collect(Collectors.toList());
 
         List<Task> tasksToBeScheduled = new LinkedList<>();
         if (executedTasks.isEmpty()) {
             //this is the flow that the new workflow will go through
-            tasksToBeScheduled = startWorkflow(workflow, workflowDef);
+            tasksToBeScheduled = startWorkflow(workflow);
             if (tasksToBeScheduled == null) {
                 tasksToBeScheduled = new LinkedList<>();
             }
         }
-        return decide(workflowDef, workflow, tasksToBeScheduled);
+        return decide(workflow, tasksToBeScheduled);
     }
 
-    private DeciderOutcome decide(final WorkflowDef workflowDef, final Workflow workflow, List<Task> preScheduledTasks) throws TerminateWorkflowException {
+    private DeciderOutcome decide(final Workflow workflow, List<Task> preScheduledTasks) throws TerminateWorkflowException {
 
         DeciderOutcome outcome = new DeciderOutcome();
 
@@ -119,26 +127,27 @@ public class DeciderService {
             return outcome;
         }
 
-        // Filter the list of tasks and include only tasks that are not retried,
+        // Filter the list of tasks and include only tasks that are not retried, not executed
         // marked to be skipped and not part of System tasks that is DECISION, FORK, JOIN
         // This list will be empty for a new workflow being started
         List<Task> pendingTasks = workflow.getTasks()
                 .stream()
-                .filter(task -> (!task.isRetried() && !task.getStatus().equals(SKIPPED)) || SystemTaskType.isBuiltIn(task.getTaskType()))
+                .filter(isNonPendingTask)
                 .collect(Collectors.toList());
 
         // Get all the tasks that are ready to rerun or not marked to be skipped
         // This list will be empty for a new workflow
         Set<String> executedTaskRefNames = workflow.getTasks()
                 .stream()
-                .filter(task -> !task.getStatus().equals(SKIPPED) && !task.getStatus().equals(READY_FOR_RERUN))
+                .filter(Task::isExecuted)
                 .map(Task::getReferenceTaskName)
                 .collect(Collectors.toSet());
 
-        //Traverse the pre-scheduled tasks to a linkedHasMap
-        Map<String, Task> tasksToBeScheduled = preScheduledTasks.stream()
-                .collect(Collectors.toMap(Task::getReferenceTaskName, Function.identity(),
-                        (element1, element2) -> element2, LinkedHashMap::new));
+        Map<String, Task> tasksToBeScheduled = new LinkedHashMap<>();
+
+        preScheduledTasks.forEach(preScheduledTask -> {
+            tasksToBeScheduled.put(preScheduledTask.getReferenceTaskName(), preScheduledTask);
+        });
 
         // A new workflow does not enter this code branch
         for (Task pendingTask : pendingTasks) {
@@ -148,24 +157,25 @@ public class DeciderService {
                 executedTaskRefNames.remove(pendingTask.getReferenceTaskName());
             }
 
-            TaskDef taskDefinition = metadataDAO.getTaskDef(pendingTask.getTaskDefName());
-            if (taskDefinition != null) {
-                checkForTimeout(taskDefinition, pendingTask);
-                // If the task has not been updated for "responseTimeout" then mark task as TIMED_OUT
-                if (isResponseTimedOut(taskDefinition, pendingTask)) {
-                    timeoutTask(pendingTask);
+            Optional<TaskDef> taskDefinition = pendingTask.getTaskDefinition();
+
+            if (taskDefinition.isPresent()) {
+                checkForTimeout(taskDefinition.get(), pendingTask);
+                // If the task has not been updated for "responseTimeoutSeconds" then mark task as TIMED_OUT
+                if (isResponseTimedOut(taskDefinition.get(), pendingTask)) {
+                    timeoutTask(taskDefinition.get(), pendingTask);
                 }
             }
 
             if (!pendingTask.getStatus().isSuccessful()) {
                 WorkflowTask workflowTask = pendingTask.getWorkflowTask();
                 if (workflowTask == null) {
-                    workflowTask = workflowDef.getTaskByRefName(pendingTask.getReferenceTaskName());
+                    workflowTask = workflow.getWorkflowDefinition().getTaskByRefName(pendingTask.getReferenceTaskName());
                 }
                 if (workflowTask != null && workflowTask.isOptional()) {
                     pendingTask.setStatus(COMPLETED_WITH_ERRORS);
                 } else {
-                    Task retryTask = retry(taskDefinition, workflowTask, pendingTask, workflow);
+                    Task retryTask = retry(taskDefinition.orElse(null), workflowTask, pendingTask, workflow);
                     tasksToBeScheduled.put(retryTask.getReferenceTaskName(), retryTask);
                     executedTaskRefNames.remove(retryTask.getReferenceTaskName());
                     outcome.tasksToBeUpdated.add(pendingTask);
@@ -174,13 +184,14 @@ public class DeciderService {
 
             if (!pendingTask.isExecuted() && !pendingTask.isRetried() && pendingTask.getStatus().isTerminal()) {
                 pendingTask.setExecuted(true);
-                List<Task> nextTasks = getNextTask(workflowDef, workflow, pendingTask);
+                List<Task> nextTasks = getNextTask(workflow, pendingTask);
                 nextTasks.forEach(nextTask -> tasksToBeScheduled.putIfAbsent(nextTask.getReferenceTaskName(), nextTask));
                 outcome.tasksToBeUpdated.add(pendingTask);
-                logger.debug("Scheduling Tasks from {}, next = {}", pendingTask.getTaskDefName(),
+                logger.debug("Scheduling Tasks from {}, next = {} for workflowId: {}", pendingTask.getTaskDefName(),
                         nextTasks.stream()
                                 .map(Task::getTaskDefName)
-                                .collect(Collectors.toList()));
+                                .collect(Collectors.toList()),
+                        workflow.getWorkflowId());
             }
         }
 
@@ -189,13 +200,13 @@ public class DeciderService {
                 .filter(task -> !executedTaskRefNames.contains(task.getReferenceTaskName()))
                 .collect(Collectors.toList());
         if (!unScheduledTasks.isEmpty()) {
-            logger.debug("Scheduling Tasks {} ", unScheduledTasks.stream()
+            logger.debug("Scheduling Tasks {} for workflow: {}", unScheduledTasks.stream()
                     .map(Task::getTaskDefName)
-                    .collect(Collectors.toList()));
+                    .collect(Collectors.toList()),
+                    workflow.getWorkflowId());
             outcome.tasksToBeScheduled.addAll(unScheduledTasks);
         }
-        updateOutput(workflowDef, workflow);
-        if (outcome.tasksToBeScheduled.isEmpty() && checkForWorkflowCompletion(workflowDef, workflow)) {
+        if (outcome.tasksToBeScheduled.isEmpty() && checkForWorkflowCompletion(workflow)) {
             logger.debug("Marking workflow as complete.  workflow=" + workflow.getWorkflowId() + ", tasks=" + workflow.getTasks());
             outcome.isComplete = true;
         }
@@ -203,26 +214,28 @@ public class DeciderService {
         return outcome;
     }
 
-    private List<Task> startWorkflow(Workflow workflow, WorkflowDef def) throws TerminateWorkflowException {
+    private List<Task> startWorkflow(Workflow workflow) throws TerminateWorkflowException {
+        final WorkflowDef workflowDef = workflow.getWorkflowDefinition();
 
-        logger.debug("Starting workflow " + def.getName() + "/" + workflow.getWorkflowId());
+        logger.debug("Starting workflow " + workflowDef.getName() + "/" + workflow.getWorkflowId());
         //The tasks will be empty in case of new workflow
         List<Task> tasks = workflow.getTasks();
         // Check if the workflow is a re-run case or if it is a new workflow execution
         if (workflow.getReRunFromWorkflowId() == null || tasks.isEmpty()) {
 
-            if (def.getTasks().isEmpty()) {
+            if (workflowDef.getTasks().isEmpty()) {
                 throw new TerminateWorkflowException("No tasks found to be executed", WorkflowStatus.COMPLETED);
             }
 
-            WorkflowTask taskToSchedule = def.getTasks().getFirst(); //Nothing is running yet - so schedule the first task
-            //Loop until a non-skipped task is found
+            WorkflowTask taskToSchedule = workflowDef.getTasks().get(0); //Nothing isSystemTask running yet - so schedule the first task
+            //Loop until a non-skipped task isSystemTask found
+
             while (isTaskSkipped(taskToSchedule, workflow)) {
-                taskToSchedule = def.getNextTask(taskToSchedule.getTaskReferenceName());
+                taskToSchedule = workflowDef.getNextTask(taskToSchedule.getTaskReferenceName());
             }
 
             //In case of a new workflow a the first non-skippable task will be scheduled
-            return getTasksToBeScheduled(def, workflow, taskToSchedule, 0);
+            return getTasksToBeScheduled(workflow, taskToSchedule, 0);
         }
 
         // Get the first task to schedule
@@ -245,25 +258,38 @@ public class DeciderService {
 
     }
 
-    private void updateOutput(final WorkflowDef def, final Workflow workflow) {
-
+    /**
+     * Updates the workflow output.
+     *
+     * @param workflow the workflow instance
+     * @param task     if not null, the output of this task will be copied to workflow output if no output parameters are specified in the workflow defintion
+     *                 if null, the output of the last task in the workflow will be copied to workflow output of no output parameters are specified in the workflow definition
+     */
+    void updateWorkflowOutput(final Workflow workflow, @Nullable Task task) {
         List<Task> allTasks = workflow.getTasks();
         if (allTasks.isEmpty()) {
             return;
         }
 
-        Task last;
-        last = allTasks.get(allTasks.size() - 1);
-        Map<String, Object> output = last.getOutputData();
+        Task last = Optional.ofNullable(task).orElse(allTasks.get(allTasks.size() - 1));
 
-        if (!def.getOutputParameters().isEmpty()) {
-            output = parametersUtils.getTaskInput(def.getOutputParameters(), workflow, null, null);
+        WorkflowDef workflowDef = workflow.getWorkflowDefinition();
+        Map<String, Object> output;
+        if (workflowDef.getOutputParameters() != null && !workflowDef.getOutputParameters().isEmpty()) {
+            Workflow workflowInstance = populateWorkflowAndTaskData(workflow);
+            output = parametersUtils.getTaskInput(workflowDef.getOutputParameters(), workflowInstance, null, null);
+        } else if (StringUtils.isNotBlank(last.getExternalOutputPayloadStoragePath())) {
+            output = externalPayloadStorageUtils.downloadPayload(last.getExternalOutputPayloadStoragePath());
+            Monitors.recordExternalPayloadStorageUsage(last.getTaskDefName(), ExternalPayloadStorage.Operation.READ.toString(), ExternalPayloadStorage.PayloadType.TASK_OUTPUT.toString());
+        } else {
+            output = last.getOutputData();
         }
+
         workflow.setOutput(output);
+        externalPayloadStorageUtils.verifyAndUpload(workflow, ExternalPayloadStorage.PayloadType.WORKFLOW_OUTPUT);
     }
 
-    private boolean checkForWorkflowCompletion(final WorkflowDef def, final Workflow workflow) throws TerminateWorkflowException {
-
+    private boolean checkForWorkflowCompletion(final Workflow workflow) throws TerminateWorkflowException {
         List<Task> allTasks = workflow.getTasks();
         if (allTasks.isEmpty()) {
             return false;
@@ -272,8 +298,8 @@ public class DeciderService {
         Map<String, Status> taskStatusMap = new HashMap<>();
         workflow.getTasks().forEach(task -> taskStatusMap.put(task.getReferenceTaskName(), task.getStatus()));
 
-        LinkedList<WorkflowTask> wftasks = def.getTasks();
-        boolean allCompletedSuccessfully = wftasks.stream().parallel().allMatch(wftask -> {
+        List<WorkflowTask> workflowTasks = workflow.getWorkflowDefinition().getTasks();
+        boolean allCompletedSuccessfully = workflowTasks.stream().parallel().allMatch(wftask -> {
             Status status = taskStatusMap.get(wftask.getTaskReferenceName());
             return status != null && status.isSuccessful() && status.isTerminal();
         });
@@ -283,19 +309,16 @@ public class DeciderService {
                 .allMatch(Status::isTerminal);
 
         boolean noPendingSchedule = workflow.getTasks().stream().parallel().filter(wftask -> {
-            String next = getNextTasksToBeScheduled(def, workflow, wftask);
+            String next = getNextTasksToBeScheduled(workflow, wftask);
             return next != null && !taskStatusMap.containsKey(next);
         }).collect(Collectors.toList()).isEmpty();
 
-        if (allCompletedSuccessfully && noPendingTasks && noPendingSchedule) {
-            return true;
-        }
-
-        return false;
+        return allCompletedSuccessfully && noPendingTasks && noPendingSchedule;
     }
 
     @VisibleForTesting
-    List<Task> getNextTask(WorkflowDef def, Workflow workflow, Task task) {
+    List<Task> getNextTask(Workflow workflow, Task task) {
+        final WorkflowDef workflowDef = workflow.getWorkflowDefinition();
 
         // Get the following task after the last completed task
         if (SystemTaskType.is(task.getTaskType()) && SystemTaskType.DECISION.name().equals(task.getTaskType())) {
@@ -305,18 +328,19 @@ public class DeciderService {
         }
 
         String taskReferenceName = task.getReferenceTaskName();
-        WorkflowTask taskToSchedule = def.getNextTask(taskReferenceName);
+        WorkflowTask taskToSchedule = workflowDef.getNextTask(taskReferenceName);
         while (isTaskSkipped(taskToSchedule, workflow)) {
-            taskToSchedule = def.getNextTask(taskToSchedule.getTaskReferenceName());
+            taskToSchedule = workflowDef.getNextTask(taskToSchedule.getTaskReferenceName());
         }
         if (taskToSchedule != null) {
-            return getTasksToBeScheduled(def, workflow, taskToSchedule, 0);
+            return getTasksToBeScheduled(workflow, taskToSchedule, 0);
         }
 
         return Collections.emptyList();
     }
 
-    private String getNextTasksToBeScheduled(WorkflowDef def, Workflow workflow, Task task) {
+    private String getNextTasksToBeScheduled(Workflow workflow, Task task) {
+        final WorkflowDef def = workflow.getWorkflowDefinition();
 
         String taskReferenceName = task.getReferenceTaskName();
         WorkflowTask taskToSchedule = def.getNextTask(taskReferenceName);
@@ -332,6 +356,7 @@ public class DeciderService {
         int retryCount = task.getRetryCount();
         if (!task.getStatus().isRetriable() || SystemTaskType.isBuiltIn(task.getTaskType()) || taskDefinition == null || taskDefinition.getRetryCount() <= retryCount) {
             WorkflowStatus status = task.getStatus().equals(TIMED_OUT) ? WorkflowStatus.TIMED_OUT : WorkflowStatus.FAILED;
+            updateWorkflowOutput(workflow, task);
             throw new TerminateWorkflowException(task.getReasonForIncompletion(), status, task);
         }
 
@@ -359,12 +384,57 @@ public class DeciderService {
         rescheduled.setPollCount(0);
         rescheduled.setInputData(new HashMap<>());
         rescheduled.getInputData().putAll(task.getInputData());
+
+
+        if (StringUtils.isNotBlank(task.getExternalInputPayloadStoragePath())) {
+            rescheduled.setExternalInputPayloadStoragePath(task.getExternalInputPayloadStoragePath());
+        } else {
+            rescheduled.getInputData().putAll(task.getInputData());
+        }
         if (workflowTask != null && workflow.getSchemaVersion() > 1) {
-            Map<String, Object> taskInput = parametersUtils.getTaskInputV2(workflowTask.getInputParameters(), workflow, rescheduled.getTaskId(), taskDefinition);
+            Workflow workflowInstance = populateWorkflowAndTaskData(workflow);
+            Map<String, Object> taskInput = parametersUtils.getTaskInputV2(workflowTask.getInputParameters(), workflowInstance, rescheduled.getTaskId(), taskDefinition);
             rescheduled.getInputData().putAll(taskInput);
         }
+        externalPayloadStorageUtils.verifyAndUpload(rescheduled, ExternalPayloadStorage.PayloadType.TASK_INPUT);
         //for the schema version 1, we do not have to recompute the inputs
         return rescheduled;
+    }
+
+    /**
+     * Populates the workflow input data and the tasks input/output data if stored in external payload storage.
+     * This method creates a deep copy of the workflow instance where the payloads will be stored after downloading from external payload storage.
+     *
+     * @param workflow the workflow for which the data needs to be populated
+     * @return a copy of the workflow with the payload data populated
+     */
+    @VisibleForTesting
+    Workflow populateWorkflowAndTaskData(Workflow workflow) {
+        Workflow workflowInstance = workflow.copy();
+
+        if (StringUtils.isNotBlank(workflow.getExternalInputPayloadStoragePath())) {
+            // download the workflow input from external storage here and plug it into the workflow
+            Map<String, Object> workflowInputParams = externalPayloadStorageUtils.downloadPayload(workflow.getExternalInputPayloadStoragePath());
+            Monitors.recordExternalPayloadStorageUsage(workflow.getWorkflowName(), ExternalPayloadStorage.Operation.READ.toString(), ExternalPayloadStorage.PayloadType.WORKFLOW_INPUT.toString());
+            workflowInstance.setInput(workflowInputParams);
+            workflowInstance.setExternalInputPayloadStoragePath(null);
+        }
+
+        workflowInstance.getTasks().stream()
+                .filter(task -> StringUtils.isNotBlank(task.getExternalInputPayloadStoragePath()) || StringUtils.isNotBlank(task.getExternalOutputPayloadStoragePath()))
+                .forEach(task -> {
+                    if (StringUtils.isNotBlank(task.getExternalOutputPayloadStoragePath())) {
+                        task.setOutputData(externalPayloadStorageUtils.downloadPayload(task.getExternalOutputPayloadStoragePath()));
+                        Monitors.recordExternalPayloadStorageUsage(task.getTaskDefName(), ExternalPayloadStorage.Operation.READ.toString(), ExternalPayloadStorage.PayloadType.TASK_OUTPUT.toString());
+                        task.setExternalOutputPayloadStoragePath(null);
+                    }
+                    if (StringUtils.isNotBlank(task.getExternalInputPayloadStoragePath())) {
+                        task.setInputData(externalPayloadStorageUtils.downloadPayload(task.getExternalInputPayloadStoragePath()));
+                        Monitors.recordExternalPayloadStorageUsage(task.getTaskDefName(), ExternalPayloadStorage.Operation.READ.toString(), ExternalPayloadStorage.PayloadType.TASK_INPUT.toString());
+                        task.setExternalInputPayloadStoragePath(null);
+                    }
+                });
+        return workflowInstance;
     }
 
     @VisibleForTesting
@@ -378,9 +448,9 @@ public class DeciderService {
             return;
         }
 
-        long timeout = 1000 * taskDef.getTimeoutSeconds();
+        long timeout = 1000L * taskDef.getTimeoutSeconds();
         long now = System.currentTimeMillis();
-        long elapsedTime = now - (task.getStartTime() + (task.getStartDelayInSeconds() * 1000));
+        long elapsedTime = now - (task.getStartTime() + ((long)task.getStartDelayInSeconds() * 1000L));
 
         if (elapsedTime < timeout) {
             return;
@@ -405,11 +475,14 @@ public class DeciderService {
 
     @VisibleForTesting
     boolean isResponseTimedOut(TaskDef taskDefinition, Task task) {
-
         if (taskDefinition == null) {
             logger.warn("missing task type : {}, workflowId= {}", task.getTaskDefName(), task.getWorkflowInstanceId());
             return false;
         }
+        if (task.getStatus().isTerminal() || !task.getStatus().equals(IN_PROGRESS) || taskDefinition.getResponseTimeoutSeconds() == 0) {
+            return false;
+        }
+
         if (!task.getStatus().equals(IN_PROGRESS) || taskDefinition.getResponseTimeoutSeconds() == 0) {
             return false;
         }
@@ -421,7 +494,7 @@ public class DeciderService {
 
         logger.debug("Evaluating responseTimeOut for Task: {}, with Task Definition: {} ", task, taskDefinition);
 
-        long responseTimeout = 1000 * taskDefinition.getResponseTimeoutSeconds();
+        long responseTimeout = 1000L * taskDefinition.getResponseTimeoutSeconds();
         long now = System.currentTimeMillis();
         long noResponseTime = now - task.getUpdateTime();
 
@@ -435,73 +508,71 @@ public class DeciderService {
         return true;
     }
 
-    private void timeoutTask(Task task) {
-        String reason = "responseTimeout: " + task.getResponseTimeoutSeconds() + " exceeded for the taskId: " + task.getTaskId() + " with Task Definition: " + task.getTaskDefName();
+    private void timeoutTask(TaskDef taskDef, Task task) {
+        String reason = "responseTimeout: " + taskDef.getResponseTimeoutSeconds() + " exceeded for the taskId: " + task.getTaskId() + " with Task Definition: " + task.getTaskDefName();
         logger.debug(reason);
         task.setStatus(TIMED_OUT);
         task.setReasonForIncompletion(reason);
     }
 
-    public List<Task> getTasksToBeScheduled(WorkflowDef def, Workflow workflow,
+    public List<Task> getTasksToBeScheduled(Workflow workflow,
                                             WorkflowTask taskToSchedule, int retryCount) {
-        return getTasksToBeScheduled(def, workflow, taskToSchedule, retryCount, null);
+        return getTasksToBeScheduled(workflow, taskToSchedule, retryCount, null);
     }
 
-    public List<Task> getTasksToBeScheduled(WorkflowDef workflowDefinition, Workflow workflowInstance,
+    public List<Task> getTasksToBeScheduled(Workflow workflow,
                                             WorkflowTask taskToSchedule, int retryCount, String retriedTaskId) {
-
+        workflow = populateWorkflowAndTaskData(workflow);
         Map<String, Object> input = parametersUtils.getTaskInput(taskToSchedule.getInputParameters(),
-                workflowInstance, null, null);
+                workflow, null, null);
 
-        Type taskType = Type.USER_DEFINED;
+        TaskType taskType = TaskType.USER_DEFINED;
         String type = taskToSchedule.getType();
-        if (Type.isSystemTask(type)) {
-            taskType = Type.valueOf(type);
+        if (TaskType.isSystemTask(type)) {
+            taskType = TaskType.valueOf(type);
         }
 
         // get in progress tasks for this workflow instance
-        List<String> inProgressTasks = workflowInstance.getTasks().stream()
-                .filter(pendingTask -> pendingTask.getStatus().equals(Status.IN_PROGRESS))
+        List<String> inProgressTasks = workflow.getTasks().stream()
+                .filter(runningTask -> runningTask.getStatus().equals(Status.IN_PROGRESS))
                 .map(Task::getReferenceTaskName)
                 .collect(Collectors.toList());
 
-        TaskDef taskDef = Optional.ofNullable(taskToSchedule.getName())
-                .map(metadataDAO::getTaskDef)
-                .orElse(null);
-
+        String taskId = IDGenerator.generate();
         TaskMapperContext taskMapperContext = TaskMapperContext.newBuilder()
-                .withWorkflowDefinition(workflowDefinition)
-                .withWorkflowInstance(workflowInstance)
-                .withTaskDefinition(taskDef)
+                .withWorkflowDefinition(workflow.getWorkflowDefinition())
+                .withWorkflowInstance(workflow)
+                .withTaskDefinition(taskToSchedule.getTaskDefinition())
                 .withTaskToSchedule(taskToSchedule)
                 .withTaskInput(input)
                 .withRetryCount(retryCount)
                 .withRetryTaskId(retriedTaskId)
-                .withTaskId(IDGenerator.generate())
+                .withTaskId(taskId)
                 .withDeciderService(this)
                 .build();
 
         // for static forks, each branch of the fork creates a join task upon completion
         // for dynamic forks, a join task is created with the fork and also with each branch of the fork
         // a new task must only be scheduled if a task with the same reference name is not in progress for this workflow instance
-        return taskMappers.get(taskType.name()).getMappedTasks(taskMapperContext).stream()
+        List<Task> tasks = taskMappers.get(taskType.name()).getMappedTasks(taskMapperContext).stream()
                 .filter(task -> !inProgressTasks.contains(task.getReferenceTaskName()))
                 .collect(Collectors.toList());
+        tasks.forEach(task -> externalPayloadStorageUtils.verifyAndUpload(task, ExternalPayloadStorage.PayloadType.TASK_INPUT));
+        return tasks;
     }
-
 
     private boolean isTaskSkipped(WorkflowTask taskToSchedule, Workflow workflow) {
         try {
-            boolean retval = false;
+            boolean isTaskSkipped = false;
             if (taskToSchedule != null) {
                 Task t = workflow.getTaskByRefName(taskToSchedule.getTaskReferenceName());
                 if (t == null) {
-                    retval = false;
+                    isTaskSkipped = false;
                 } else if (t.getStatus().equals(SKIPPED)) {
-                    retval = true;
+                    isTaskSkipped = true;
                 }
             }
-            return retval;
+            return isTaskSkipped;
         } catch (Exception e) {
             throw new TerminateWorkflowException(e.getMessage());
         }
